Creating DTOs, Controllers, Services and Repositories for inheriting classes of Employee.